{
    "name": "UnityCTVisualizerInput",
    "maps": [
        {
            "name": "VolumetricObjectControls",
            "id": "9dc6422a-bbbd-42e0-8b26-5da2e6320554",
            "actions": [
                {
                    "name": "Scale",
                    "type": "PassThrough",
                    "id": "29c8d2a4-9dd5-43cc-b822-cf9e59638612",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowScaleActivator",
                    "type": "Button",
                    "id": "a640b0f1-b8f2-473c-bb22-f9fb527531a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4441bd2e-5b55-4af3-9d5f-dfae440377d5",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scale",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19aa9548-bc8d-4aa1-9b70-64244f74e611",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SlowScaleActivator",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}